# data-creator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: expected-output-prompt.jinja  main.py  question-prompt.jinja  refine_question_hypothetical-scenario.jinja  refine_question_multi-context.jinja  refine_question_reasoning.jinja
