[project]
name = "datacreator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "docling>=2.66.0",
    "jinja2>=3.1.6",
    "langchain-openai>=1.1.7",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "spacy>=3.8.11",
    "tqdm>=4.67.1",
]
